<resources>
    <string name="app_name">QuizzTime</string>
    <string name="label_quizz">Quizz</string>
    <string name="label_time">Time</string>
    <string name="hint_your_name">Your Name</string>
    <string name="label_submit">Submit</string>
    <string name="label_q_question_will_go_here">Q.     Question will go here</string>
    <string name="label_option_4">Option 4</string>
    <string name="label_option_3">Option 3</string>
    <string name="label_option_2">Option 2</string>
    <string name="label_option_1">Option 1</string>
    <string name="u2022_option_1">\u2022 Option 1</string>
    <string name="u2022_option_2">\u2022 Option 2</string>
    <string name="u2022_option_3">\u2022 Option 3</string>
    <string name="u2022_option_4">\u2022 Option 4</string>
    <string name="bullet">\u2022</string>
    <string name="hint_type_your_answer_here">Type your answer here</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="preference_name">QuizzTime</string>
    <string name="preference_username">UserName</string>
    <string name="question_1">Q1. In which city the monument Taj Mahal located?</string>
    <string name="question_2">Q2. Select the states in which Ganga river flows.</string>
    <string name="question_3">Q3. In which city the above palace is located?</string>
    <string name="question_4">Q4. Which city is called as City of Lakes?</string>
    <string name="question_5">Q5. Where is Golden Temple situated?</string>
    <string name="question_6">Q6. In which state Jog Falls Located?</string>
    <string name="question_7">Q7. Name the cave displayed in the image?</string>
    <string name="question_8">Q8. Select the states in which Coffee plantation is made.</string>
    <string name="question_9">Q9. Where is Wankhede Stadium situated?</string>
    <string name="question_10">Q10. In which city the above place is located?</string>
    <string name="option_agra">Agra</string>
    <string name="option_mumbai">Mumbai</string>
    <string name="option_bengalore">Bengalore</string>
    <string name="option_hyderabad">Hyderabad</string>
    <string name="option_uttarakhand">Uttarakhand</string>
    <string name="option_maharashtra">Maharashtra</string>
    <string name="option_uttar_pradesh">Uttar Pradesh</string>
    <string name="option_bihar">Bihar</string>
    <string name="question2_answer">Uttarakhand,Uttar Pradesh,Bihar</string>
    <string name="option_mysore">Mysore</string>
    <string name="option_delhi">Delhi</string>
    <string name="option_pune">Pune</string>
    <string name="option_chennai">Chennai</string>
    <string name="option_udaipur">Udaipur</string>
    <string name="option_kolkata">Kolkata</string>
    <string name="option_jaipur">Jaipur</string>
    <string name="option_amritsar">Amritsar</string>
    <string name="option_karnataka">Karnataka</string>
    <string name="option_ajanta_cave">Ajanta Caves</string>
    <string name="option_elephanta_island">Elephanta Island Caves</string>
    <string name="option_badami_caves">Badami Caves</string>
    <string name="option_undavalli_caves">Undavalli and Mogalarajapuram Caves</string>
    <string name="option_kerala">Kerala</string>
    <string name="question8_answer">Karnataka,Kerala</string>
    <string name="option_kanyakumari">Kanyakumari</string>
    <string name="option_goa">Goa</string>
    <string name="option_vizag">Visakhapatnam</string>
    <string name="mesg_enter_your_ans">Please enter your answer</string>
    <string name="mesg_select_option">Please select the option</string>
    <string name="label_continue">Continue</string>
    <string name="label_view_answer">View Answer</string>
    <string name="mesg_weldone">Well Done! %s</string>
    <string name="mesg_tryagain">Try Again !</string>
    <string name="label_answer">Answer : %s</string>
    <string name="label_tryagain">Try Again</string>
    <string name="preference_score">Score</string>
    <string name="label_score">Score</string>
    <string name="label_your_score">Your Score out of 10</string>
    <string name="label_home">Home</string>
    <string name="thankyou_mesg">Thank you, your valuable feedback and suggestions would be appreciated.</string>
    <string name="int_resource">%d</string>
    <string name="mesg_congrats">Hey %s Congrats on completing the Quiz.</string>
    <string name="mesg_already_answered">You have already answered this Question!</string>
    <string name="key_list">List</string>
    <string name="key_score">Score</string>
</resources>
