<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:fillViewport="true"
    android:padding="@dimen/margin_16dp">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/cornered_white_bg_radius">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_hero"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimn_200dp"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop"
                android:src="@drawable/background" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_hero"
                android:layout_margin="@dimen/margin_16dp">

                <TextView
                    android:id="@+id/tv_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_q_question_will_go_here"
                    android:textColor="@color/color_tv"
                    android:textSize="@dimen/textSize_16sp" />

                <LinearLayout
                    android:id="@+id/cg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_question"
                    android:layout_marginTop="@dimen/margin_24dp"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/cb_option1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_option_1"
                        android:textColor="@color/color_tv"
                        android:textSize="@dimen/textSize_14sp" />

                    <CheckBox
                        android:id="@+id/cb_option2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_option_2"
                        android:textColor="@color/color_tv"
                        android:textSize="@dimen/textSize_14sp" />

                    <CheckBox
                        android:id="@+id/cb_option3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_option_3"
                        android:textColor="@color/color_tv"
                        android:textSize="@dimen/textSize_14sp" />

                    <CheckBox
                        android:id="@+id/cb_option4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_option_4"
                        android:textColor="@color/color_tv"
                        android:textSize="@dimen/textSize_14sp" />


                </LinearLayout>


                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cg"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/margin_16dp"
                    android:layout_marginTop="@dimen/margin_32dp"
                    android:background="@drawable/btn_bg"
                    android:text="@string/label_submit"
                    android:textColor="@android:color/white" />
            </RelativeLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>


</android.support.v4.widget.NestedScrollView>