<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="com.akeditzz.quizztime.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16dp"
            android:background="@drawable/white_transparent_bg">


            <LinearLayout
                android:id="@+id/hero_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_48dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_quizz"
                    android:textSize="@dimen/textSize_32sp"
                    tools:fontFamily="@font/roboto_bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/label_time"
                    android:textSize="@dimen/textSize_32sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hero_text_view"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_32dp"
                android:hint="@string/hint_your_name"
                android:inputType="textCapWords"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_name"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_32dp"
                android:background="@drawable/btn_bg"
                android:text="@string/label_submit"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
